--- a/for.html
+++ b/for.html
@@ -39,27 +39,37 @@
         <div class="row">
             <div class="col-2">
             </div>
-            <div class="col-8 text">
                 <div class="container-lol">
                     <h1>
-                        Spike Spiegel and co.
+                        Links
                     </h1>
-                    <p class="aboutme-text">
-                        As previously stated, my name is Spike Spiegel. 
-                        I was born in the year 2044 and I am originally from Mars.
-                        You could call me a cowboy, in other words a bounty hunter.
-                        What I basically do is to hunt down criminals and turn them in to the police for money.
-                        I am not alone though. With me I have my companions whom I work together with.
-                        We are a diverse group of people containing: Me, Jet, Faye, our dog Ein, and our superhacker Edward.
-                        My motto is to just go with the flow and "whatever happens, happens..."
-                    </p>
-                    <img class="crewpic" src="cowboy-bebop-receiving-live-action-series-1280x720 copy.jpg" alt="Me and my crew from left to right: Jet Black, Me, Faye Valentine, Edward, Ein">
-                    <p class="img-text">Me and my crew from left to right: Jet Black, Me, Faye Valentine, Edward, Ein</p>
+                    <div class="col-5">
+                        <a target="_blank" href="https://9anime.id/watch/cowboy-bebop.mvv/ep-1">
+                            <img class="tvlink" src="tv.png" alt="Watch my very own TV-show completely free!">
+                        </a>
+                        <p>Watch my very own TV-show completely free! Not illegal at all :]</p>
+                    </div>
+                    <div class="col-2">
+                    </div>
+                    <div class="col-5">
+                        <a target="_blank" href="https://cowboybebop.fandom.com/wiki/Main_Page">
+                            <img class="wiki" src="fandom-squareLogo-1629407467650.png" alt="Check out my wiki-page for more info">
+                        </a>
+                        <p>Check out my wiki-page for more info about me, my crew and much more</p>
+                    </div>
+                    <div class="col-5">
+                        <a target="_blank" href="https://atsuko.com/collections/collections-cowboy-bebop">
+                            <img class="merch" src="d09a120d-0849-4600-952f-8a55e9360da2.png" alt="Buy my official merch">
+                        </a>
+                        <p>Buy my official merch</p>
+                    </div>
+                    <div class="col-2">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
+    
     <!-- Navigation barens funktion -->
     <script src="fortnite.js"></script>
 </body>
