--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Navigation bar -->
     <div id="navbar" class="navbar">
         <a href="index.html"> <img src= "FAicon.png" alt="Home"> </a>
         <a href="ommig.html" class="a1">About me</a>
@@ -22,6 +23,7 @@
     <div>
     </div>
 
+    <!-- Länkarna högst upp på sidan -->
     <div class="wrapper">
         <div class="row fort">
             <div class="col-2">
@@ -31,12 +33,13 @@
                 <a href="ommig.html" class="top ommig">★About me</a>
                 <a href="schema.html" class="top schema">★Schedule</a>
                 <a href="intressen.html" class="top intressen">★Interests</a>
-                <a href="lankar.html" class="top lankar">★Links</a>
+                <a href="for.html" class="top lankar">★Links</a>
             </div>
         </div>
         <div class="row">
             <div class="col-2">
             </div>
+            <!-- Boxen med text -->
             <div class="col-8 text">
                 <div class="container-lol">
                     <h1>
@@ -53,9 +56,11 @@
         </div>
     </div>
 
+    <!-- Navigation barens funktion -->
     <script src="fortnite.js"></script>
 </body>
 
+<!-- Min footer -->
 <footer>
     <div class="row">
         <div class="col-9 foot">
@@ -68,9 +73,9 @@
             <h3>
                 Socials
             </h3>
-            <a target="_blank" href="https://twitter.com/pewdiepie"><img src="2559775_bird_media_network_social_twitter_icon.png" alt="Twitter"></a>
-            <a target="_blank" href="https://youtube.com/pewdiepie"><img src="2559760_media_social_video_youtube_icon.png" alt="Youtube"></a>
-            <a target="_blank" href="https://spotify.com"><img src="3057643_media_music_network_social_icon.png" alt="Spotify"></a>
+            <a rel="noopener" target="_blank" href="https://twitter.com/pewdiepie"><img src="2559775_bird_media_network_social_twitter_icon.png" alt="Twitter"></a>
+            <a rel="noopener" target="_blank" href="https://youtube.com/pewdiepie"><img src="2559760_media_social_video_youtube_icon.png" alt="Youtube"></a>
+            <a rel="noopener" target="_blank" href="https://spotify.com"><img src="3057643_media_music_network_social_icon.png" alt="Spotify"></a>
         </div>
     </div>
 </footer>
