--- a/intressen.html
+++ b/intressen.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Navigation bar -->
     <div id="navbar" class="navbar">
         <a href="index.html"> <img src= "FAicon.png" alt="Home"> </a>
         <a href="ommig.html" class="a1">About me</a>
@@ -22,6 +23,7 @@
     <div>
     </div>
 
+    <!-- Länkarna högst upp på sidan -->
     <div class="wrapper">
         <div class="row fort">
             <div class="col-2">
@@ -38,39 +40,69 @@
             <div class="col-2">
             </div>
             <div class="col-8 text">
-                <div class="container-lol">
+                <div class="container-lol anime">
                     <h1>
-                        Welcome to my website!
+                        My interests
                     </h1>
-                    <p>
-                        Hello! My name is Spike Spiegel and I welcome you to my very own website. 
-                        On here you can find out things about me, what I like to do, even what I am up to now.
-                        Check the links above for more info!
+                    <h2>Bounty hunting</h2>
+                    <p class="col-5">
+                       As you may have picked up from the previous info on this site, I am a bounty hunter.
+                       As I have previously stated, I fly around the galaxy trying to hunt down criminals.
+                       Each criminal has a worth, and if we turn them in to the cops we get the promised amount of money.
+                       In the picture you can see Asimov Solensan. 
+                       I caught him in the first episode of my TV-show.
+                       He was just a smallfry, but he had a big bounty on his head.
                     </p>
-                    <img src= "swordfish_ani.png" class="swordfish" alt="My ship: The Swordfish">
+                    <img class="col-5 bounty-img" src="a99DTcE.png" alt="A picture of what a typical bounty looks">
+                    <h3>Karate</h3>
+                    <img class="col-5" src="image-asset.gif" alt="A video of me in action">
+                    <p class="col-5">
+                        When hunting bad guys, they most of the time fight back.
+                        In those cases I have to restrain them somehow.
+                        So instead of just shooting them, I try to beat them down instead.
+                        I try to avoid any casualties to keep up my morality.
+                        Almost everyday I sharpen my skills, in one way or another.
+                        Here on the left you can see a video of me in action.
+                        Don't I look badass?
+                    </p>
+                    <h4>Manga & Anime</h4>
+                    <p class="col-5">
+                        When I can finally relax, I spend my time either reading manga or watching anime.
+                        For those of you who aren't familiar with this form of media,
+                        it is basically comics and cartoons from Japan.
+                        And the Japanese people are objectively way better at storytelling than
+                        what we got over here in the west.
+                        The style is just in its own tier.
+                        I have a huge collection of manga in my crib, which are the japanese comics.
+                        And when I don't feel like reading I just watch some anime.
+                        I even have my very own anime, which you can find in the links section of my site. 
+                    </p>
+                    <img class="col-5" src="s-l500.jpg" alt="Picture of my manga collection">
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Navigation barens funktion -->
     <script src="fortnite.js"></script>
 </body>
 
+<!-- Min footer -->
 <footer>
     <div class="row">
         <div class="col-9 foot">
             <img src= "196-1961268_cowboy-bebop-logo-png.png" alt="Logo" class="footimg">
-            <h2>
+            <h5>
                 Thank you for visiting my website!
-            </h2>
+            </h5>
         </div>
         <div class="col-3 social">
-            <h3>
+            <h6>
                 Socials
-            </h3>
-            <a target="_blank" href="https://twitter.com/pewdiepie"><img src="2559775_bird_media_network_social_twitter_icon.png" alt="Twitter"></a>
-            <a target="_blank" href="https://youtube.com/pewdiepie"><img src="2559760_media_social_video_youtube_icon.png" alt="Youtube"></a>
-            <a target="_blank" href="https://spotify.com"><img src="3057643_media_music_network_social_icon.png" alt="Spotify"></a>
+            </h6>
+            <a rel="noopener" target="_blank" href="https://twitter.com/pewdiepie"><img src="2559775_bird_media_network_social_twitter_icon.png" alt="Twitter"></a>
+            <a rel="noopener" target="_blank" href="https://youtube.com/pewdiepie"><img src="2559760_media_social_video_youtube_icon.png" alt="Youtube"></a>
+            <a rel="noopener" target="_blank" href="https://spotify.com"><img src="3057643_media_music_network_social_icon.png" alt="Spotify"></a>
         </div>
     </div>
 </footer>
