--- a/schema.html
+++ b/schema.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Navigation bar -->
     <div id="navbar" class="navbar">
         <a href="index.html"> <img src= "FAicon.png" alt="Home"> </a>
         <a href="ommig.html" class="a1">About me</a>
@@ -22,6 +23,7 @@
     <div>
     </div>
 
+    <!-- Länkarna högst upp på sidan -->
     <div class="wrapper">
         <div class="row fort">
             <div class="col-2">
@@ -45,6 +47,8 @@
                     <p>
                         Here you can find my schedule containing all the different "interesting" activities I do during a daily basis:
                     </p>
+
+                    <!-- Schema -->
                     <div class="schedule1">
                         <table>
                             <tr class="border">
@@ -121,21 +125,21 @@
                                 <td class="border">11am</td>
                                 <td>Hunt down new bounties</td>
                                 <td>Try out your new moves on bad guys</td>
-                                <td></td>
+                                <td>Repair the ship</td>
                                 <td>Attend to your wounds from Faye</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Take Ein for a jog</td>
+                                <td>Polish my pistol</td>
+                                <td>Realize you just used up all your money on repair-costs</td>
                             </tr>
                             <tr>
                                 <td class="border">12pm</td>
                                 <td>Turn in the bad guys</td>
                                 <td>Turn in the bad guys</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Rest</td>
+                                <td>Rest</td>
+                                <td>Help Jet cook</td>
+                                <td>Clean my gun storage</td>
+                                <td>Have an existential crisis</td>
                             </tr>
                             <tr>
                                 <td class="border">Lunch</td>
@@ -143,79 +147,79 @@
                                 <td>Pizza</td>
                                 <td>Boorgir with pizza</td>
                                 <td>Pizza with boorgir</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Ramen</td>
+                                <td>Canned ravioli</td>
+                                <td>Bellpeppers and beef</td>
                             </tr>
                             <tr>
                                 <td class="border">1pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Continue scowering the galaxy for bad guys</td>
+                                <td>Continue scowering the galaxy for bad guys</td>
+                                <td>Read some manga</td>
+                                <td>Watch anime</td>
+                                <td>Check up on Ed</td>
+                                <td>Rest</td>
+                                <td>Check if there are some big bounties to catch</td>
                             </tr>
                             <tr>
                                 <td class="border">2pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Get into a fight, just for fun</td>
+                                <td>Turn in the bounties</td>
+                                <td>Continute cleaning</td>
+                                <td>Go buy more medecin, bandages, etc.</td>
+                                <td>Try to learn some hacking</td>
+                                <td>Watch gun videos on Youtube</td>
+                                <td>Gather as many bounties as possible</td>
                             </tr>
                             <tr>
                                 <td class="border">3pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Rest</td>
+                                <td>Head to the mall</td>
+                                <td>Examine the ship for uncleaned areas</td>
+                                <td>Fill up the medecine storage</td>
+                                <td>Rest</td>
+                                <td>Look up new guns on the internet</td>
+                                <td>Keep grinding them bounties</td>
                             </tr>
                             <tr>
                                 <td class="border">4pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Have a shot of prairie oyster</td>
+                                <td>Take the rest of the day off</td>
+                                <td>Rest</td>
+                                <td>Practice karate</td>
+                                <td>See if there are some smallfry to catch</td>
+                                <td>Buy a new pistol</td>
+                                <td>Continue hunting til' I have doubled what I had this morning</td>
                             </tr>
                             <tr>
                                 <td class="border">5pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Practice some Karate</td>
+                                <td>Sleep</td>
+                                <td>Check what I am going to cook tonight</td>
+                                <td>Shower again</td>
+                                <td>Turn in the catch to the police</td>
+                                <td>Rest</td>
+                                <td>Swim in money</td>
                             </tr>
                             <tr>
                                 <td class="border">6pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Smoke break</td>
+                                <td>Smoke</td>
+                                <td>Go buy all the ingredients</td>
+                                <td>Meditate</td>
+                                <td>Put my money into savings</td>
+                                <td>Read manga</td>
+                                <td>Donate some to the homeless</td>
                             </tr>
                             <tr>
                                 <td class="border">7pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Prepare dinner</td>
+                                <td>Read manga</td>
+                                <td>Cook dinner</td>
+                                <td>Rest</td>
+                                <td>Help cook dinner</td>
+                                <td>Get ingredients for dinner</td>
+                                <td>With all this money I might aswell have a party</td>
                             </tr>
                             <tr>
                                 <td class="border">Dinner</td>
@@ -223,39 +227,39 @@
                                 <td>Pizza</td>
                                 <td>Boorgir</td>
                                 <td>Bolognese</td>
-                                <td>Peppers and beef</td>
+                                <td>Bellpeppers and beef</td>
                                 <td>Chili con carne</td>
-                                <td>Lasagne</td>
+                                <td>Steak with the whole crew</td>
                             </tr>
                             <tr>
                                 <td class="border">8pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Rest</td>
+                                <td>Rest</td>
+                                <td>Go for a walk</td>
+                                <td>Check up on the crew</td>
+                                <td>Rest</td>
+                                <td>Show the crew my gun collection</td>
+                                <td>Have a long chat with the crew</td>
                             </tr>
                             <tr>
                                 <td class="border">9pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Head to the bar</td>
+                                <td>Head to the bar</td>
+                                <td>Head to the bar</td>
+                                <td>Head to the bar</td>
+                                <td>Head to the bar</td>
+                                <td>Head to the bar</td>
+                                <td>Head to the bar</td>
                             </tr>
                             <tr>
                                 <td class="border">10pm</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Go back to the ship</td>
+                                <td>Go back to the ship</td>
+                                <td>Go back to the ship</td>
+                                <td>Go back to the ship</td>
+                                <td>Go back to the ship</td>
+                                <td>Go back to the ship</td>
+                                <td>Go back to the ship</td>
                             </tr>
                             <tr>
                                 <td class="border">11pm</td>
@@ -274,9 +278,11 @@
         </div>
     </div>
 
+    <!-- Navigation barens funktion -->
     <script src="fortnite.js"></script>
 </body>
 
+<!-- Min footer -->
 <footer>
     <div class="row">
         <div class="col-9 foot">
@@ -289,9 +295,9 @@
             <h3>
                 Socials
             </h3>
-            <a target="_blank" href="https://twitter.com/pewdiepie"><img src="2559775_bird_media_network_social_twitter_icon.png" alt="Twitter"></a>
-            <a target="_blank" href="https://youtube.com/pewdiepie"><img src="2559760_media_social_video_youtube_icon.png" alt="Youtube"></a>
-            <a target="_blank" href="https://spotify.com"><img src="3057643_media_music_network_social_icon.png" alt="Spotify"></a>
+            <a rel="noopener" target="_blank" href="https://twitter.com/pewdiepie"><img src="2559775_bird_media_network_social_twitter_icon.png" alt="Twitter"></a>
+            <a rel="noopener" target="_blank" href="https://youtube.com/pewdiepie"><img src="2559760_media_social_video_youtube_icon.png" alt="Youtube"></a>
+            <a rel="noopener" target="_blank" href="https://spotify.com"><img src="3057643_media_music_network_social_icon.png" alt="Spotify"></a>
         </div>
     </div>
 </footer>
