--- a/lankar.html
+++ b/lankar.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Navigation bar -->
     <div id="navbar" class="navbar">
         <a href="index.html"> <img src= "FAicon.png" alt="Home"> </a>
         <a href="ommig.html" class="a1">About me</a>
@@ -22,6 +23,7 @@
     <div>
     </div>
 
+    <!-- Länkarna högst upp på sidan -->
     <div class="wrapper">
         <div class="row fort">
             <div class="col-2">
@@ -42,12 +44,9 @@
                     <h1>
                         Links
                     </h1>
-                    <p class="link-text">
-                        The links below direct you to other websites where you can find me!
-                    </p>
                     <div class="col-5">
                         <a target="_blank" href="https://9anime.id/watch/cowboy-bebop.mvv/ep-1">
-                            <img class="tvlink" src="196-1961268_cowboy-bebop-logo-png.png" alt="Watch my very own TV-show completely free!">
+                            <img class="tvlink" src="tv.png" alt="Watch my very own TV-show completely free!">
                         </a>
                         <p>Watch my very own TV-show completely free! Not illegal at all :]</p>
                     </div>
@@ -59,13 +58,25 @@
                         </a>
                         <p>Check out my wiki-page for more info about me, my crew and much more</p>
                     </div>
+                    <div class="col-5">
+                        <a target="_blank" href="https://atsuko.com/collections/collections-cowboy-bebop">
+                            <img class="merch" src="d09a120d-0849-4600-952f-8a55e9360da2.png" alt="Buy my official merch">
+                        </a>
+                        <p>Buy my official merch</p>
+                    </div>
+                    <div class="col-2">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
+    <!-- Navigation barens funktion -->
     <script src="fortnite.js"></script>
 </body>
 
+<!-- Min footer -->
 <footer>
     <div class="row">
         <div class="col-9 foot">
@@ -78,9 +89,9 @@
             <h3>
                 Socials
             </h3>
-            <a target="_blank" href="https://twitter.com/pewdiepie"><img src="2559775_bird_media_network_social_twitter_icon.png" alt="Twitter"></a>
-            <a target="_blank" href="https://youtube.com/pewdiepie"><img src="2559760_media_social_video_youtube_icon.png" alt="Youtube"></a>
-            <a target="_blank" href="https://spotify.com"><img src="3057643_media_music_network_social_icon.png" alt="Spotify"></a>
+            <a rel="noopener" target="_blank" href="https://twitter.com/pewdiepie"><img src="2559775_bird_media_network_social_twitter_icon.png" alt="Twitter"></a>
+            <a rel="noopener" target="_blank" href="https://youtube.com/pewdiepie"><img src="2559760_media_social_video_youtube_icon.png" alt="Youtube"></a>
+            <a rel="noopener" target="_blank" href="https://spotify.com"><img src="3057643_media_music_network_social_icon.png" alt="Spotify"></a>
         </div>
     </div>
 </footer>
