--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="ommig.html" class="top ommig">★About me</a>
                 <a href="schema.html" class="top schema">★Schedule</a>
                 <a href="intressen.html" class="top intressen">★Interests</a>
-                <a href="for.html" class="top lankar">★Links</a>
+                <a href="lankar.html" class="top lankar">★Links</a>
             </div>
         </div>
         <div class="row">
