--- a/lankar.html
+++ b/lankar.html
@@ -40,7 +40,7 @@
             <div class="col-2">
             </div>
             <div class="col-8 text">
-                <div class="container-lol">
+                <div class="container-lol linkss">
                     <h1>
                         Links
                     </h1>
@@ -62,7 +62,7 @@
                         <a target="_blank" href="https://atsuko.com/collections/collections-cowboy-bebop">
                             <img class="merch" src="d09a120d-0849-4600-952f-8a55e9360da2.png" alt="Buy my official merch">
                         </a>
-                        <p>Buy my official merch</p>
+                        <p class="merch">Buy my official merch</p>
                     </div>
                     <div class="col-2">
                     </div>
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>s
 
     <!-- Navigation barens funktion -->
     <script src="fortnite.js"></script>
